--- a/assets/css/pand.css
+++ b/assets/css/pand.css
@@ -1,3 +1,27 @@
 *{
-	background-color: black;
+	background-color: #2B2722;
+}
+.menu {
+	padding: 20px; 
+	background-color: #96221E;
+	overflow: auto;
+}
+ul{
+	list-style-type: none;
+	margin: 0;
+	padding: 0;
+	/*overflow: hidden;*/
+	
+}
+li{
+	float: left;
+}
+li a{
+	background-color: #96221E;
+	display: block;
+	color: white;
+	text-align: center;
+	padding:14px 16px;
+	text-decoration: none;
+	font-family: "Baloo Paaji";
 }
